test/Fail/Issue1236.err
Issue1236.agda:8.1-16: error: [CoverageIssue]
Incomplete pattern matching for boom. Missing cases:
  boom Zero
when checking the definition of boom
